--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "watch": "npm run serve:dev  -- --watch",
     "client:dev": "webpack --config config/webpack.config.dev.js --progress",
     "client:prod": "webpack --config config/webpack.config.prod.js --progress",
+    "client:github": "webpack --config config/webpack.config.github.js --progress",
     "serve:dev": "webpack-dev-server --config config/webpack.config.dev.js",
     "serve:staging": "webpack-dev-server --config config/webpack.config.staging.js"
   },
